manifests/prod/immich/EndpointSlice-immich.yaml
addressType: IPv4
apiVersion: discovery.k8s.io/v1
endpoints:
  - addresses:
      - 100.83.142.17
    conditions:
      ready: true
kind: EndpointSlice
metadata:
  labels:
    kubernetes.io/service-name: immich
  name: immich
  namespace: immich
ports:
  - name: http
    port: 3018
    protocol: TCP
