manifests/prod/immich/Service-immich.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: immich
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3018
  type: ClusterIP
